--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,8 @@
   background-color: #F9F7F4;
   display: flex;
   flex-direction: column;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 950px) {
