--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -8,7 +8,7 @@
   font-weight: 400;
   line-height: 28px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 
