--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -6,8 +6,8 @@
   min-height: 100vh;
   max-width: 900px;
   margin: 0 auto;
-  color: #1B1F2B;
-  background-color: #F9F7F4;
+  color: #1b1f2b;
+  background-color: #f9f7f4;
 
   @include xl {
     padding: 0 10px;
