Refactor Header: Для стилизации компонента использован sass

--- a/src/common/mixins.scss
+++ b/src/common/mixins.scss
@@ -6,8 +6,20 @@
   }
 }
 
+@mixin l {
+  @media (max-width: $breakpoint_l) {
+    @content;
+  }
+}
+
 @mixin m {
   @media (max-width: $breakpoint_m) {
+    @content;
+  }
+}
+
+@mixin s {
+  @media (max-width: $breakpoint_s) {
     @content;
   }
 }
