--- a/src/common/breakpoints.scss
+++ b/src/common/breakpoints.scss
@@ -1,5 +1,5 @@
 // $breakpoint_xxl: 1280px;
 $breakpoint_xl: 950px;
-// $breakpoint_l: 820px;
+$breakpoint_l: 650px;
 $breakpoint_m: 550px;
-// $breakpoint_s: 450px;
+$breakpoint_s: 380px;
