--- a/src/components/Task/Task.module.scss
+++ b/src/components/Task/Task.module.scss
@@ -30,6 +30,8 @@
     font-size: 14px;
     line-height: 18px;
   }
+
+  @include hover;
 }
 
 .text {
@@ -96,8 +98,14 @@
     background-image: url(../../images/edit-ico.svg);
   }
 
+  &:hover {
+    opacity: 0.7;
+  }
+
   @include m {
     min-width: 20px;
     min-height: 20px;
   }
+
+  @include hover;
 }
