--- a/src/common/mixins.scss
+++ b/src/common/mixins.scss
@@ -27,3 +27,23 @@
 @mixin hover {
   transition: all 200ms ease;
 }
+
+@mixin hoverUnderline() {
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: #1b1f2b;
+    opacity: 0;
+
+    @include hover;
+  }
+
+  &:hover::after {
+    opacity: 1;
+  }
+}
