--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -29,20 +29,27 @@
 }
 
 .text {
+  position: relative;
   margin-right: 5px;
   cursor: pointer;
 
-  &.focus {
-    text-decoration: underline;
-    text-underline-offset: 5px;
-  }
+  &.focus::after {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: #1b1f2b;
+    opacity: 1;
 
-  &:hover {
-    text-decoration: underline;
-    text-underline-offset: 5px;
+    @include hover;
   }
 
   @include hover;
+
+  @include hoverUnderline;
 }
 
 .common {
@@ -107,25 +114,21 @@
 }
 
 .clear_type_all {
+  position: relative;
   cursor: pointer;
 
-  &:hover {
-    text-decoration: underline;
-    text-underline-offset: 5px;
-  }
-
   @include hover;
+
+  @include hoverUnderline;
 }
 
 .clear_type_completed {
+  position: relative;
   cursor: pointer;
 
-  &:hover {
-    text-decoration: underline;
-    text-underline-offset: 5px;
-  }
-
   @include hover;
+
+  @include hoverUnderline;
 }
 
 .counter {
