--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -25,7 +25,7 @@
 }
 
 @mixin hover {
-  transition: all 200ms ease;
+  transition: opacity 200ms, background-color 200ms;
 }
 
 @mixin hoverUnderline() {
