--- a/src/components/Task/Task.module.scss
+++ b/src/components/Task/Task.module.scss
@@ -36,10 +36,20 @@
 
 .text {
   margin: 0 10px;
+  padding: 0;
   flex-grow: 1;
+  box-sizing: border-box;
   text-overflow: ellipsis;
   overflow: hidden;
   cursor: pointer;
+
+  &:read-only {
+    border: 0;
+    background-color: transparent;
+    &:focus {
+      outline: 0;
+    }
+  }
 }
 
 .check {
